--- a/scss/main-sections/_accreditations.scss
+++ b/scss/main-sections/_accreditations.scss
@@ -1,4 +1,7 @@
 div.accreditations-container{
+    @media (min-width: 768px){
+        margin-top: 60px;
+    }
     div.slick-list{
         div.slick-track{
             background-color: white;
