--- a/scss/main-sections/_middle.scss
+++ b/scss/main-sections/_middle.scss
@@ -27,14 +27,14 @@ div#middle{
                 span{
                     font-size: 1.625rem;
                 }
-                em{//***
+                em{
                     font-weight: 600;
                     font-size: 2rem;
                     position: relative;
                     top: .25rem;
                 }
             }
-            @media (min-width: 768px){//***
+            @media (min-width: 768px){
                 display: flex;
                 justify-content: space-between;
                 align-items: baseline;
@@ -88,7 +88,7 @@ div#middle{
                     //
                     ul{
                         display: grid;
-                        grid-template-columns: repeat(2, calc( (100% - ( 30px * 2)) / 2) );
+                        grid-template-columns: repeat(2, calc( (100% - 30px) / 2) );
                         column-gap: 30px;
                         li{
                             display: flex;
