--- a/scss/mixins/services/_service.scss
+++ b/scss/mixins/services/_service.scss
@@ -64,9 +64,7 @@
                 font-size: 1.3rem;
                 font-weight: 400;
                 position: relative;
-                padding-bottom: 10px;
-                margin: 0 0 11px;
-                
+                margin: 0;
             }
             p{
                 font-size: .8125rem;
@@ -86,8 +84,6 @@
                 border: 1px solid transparent;
                 border-radius: 3px;;
                 font-weight: 400;
-                //calculated
-                // width: 127.737px;
                 width: 130px;
                 height: 45px;
             }
